--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "DiBotto_demo"]
-	path = DiBotto_demo
-	url = https://github.com/xDonatello/DiBotto_demo.git
+[submodule "provaBot1"]
+	path = provaBot1
+	url = https://github.com/ClaudioScappatura/provaBot1.git
