--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ certifi==2021.5.30
 chardet==4.0.0
 click==8.0.1
 colorama==0.4.4
-Flask==2.0.1
+Flask>=2.1.2
 gunicorn==20.1.0
 idna==2.10
 itsdangerous==2.0.1
@@ -14,3 +14,7 @@ requests==2.25.1
 soupsieve==2.2.1
 urllib3==1.26.6
 Werkzeug==2.0.1
+aiohttp>3.8.0,<3.9.0
+Babel>2.9.1,<2.10.0
+certifi> 2021.10.8
+aiogram>=2.21
