--- a/requirements.txt
+++ b/requirements.txt
@@ -14,8 +14,8 @@ requests==2.25.1
 soupsieve==2.2.1
 urllib3==1.26.6
 Werkzeug==2.0.1
-aiohttp>3.8.0,<3.9.0
-Babel>2.9.1,<2.10.0
-certifi> 2021.10.8
-aiogram>=2.21
+aiohttp==3.8.1
+Babel==2.9.1
+certifi==2021.10.8
+aiogram==2.21
 
