--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 beautifulsoup4==4.9.3
 bs4==0.0.1
-certifi==2021.5.30
+certifi==2021.10.8
 chardet==4.0.0
 click==8.0.1
 colorama==0.4.4
@@ -14,14 +14,6 @@ requests==2.25.1
 soupsieve==2.2.1
 urllib3==1.26.6
 Werkzeug==2.0.1
-<<<<<<< HEAD
-aiohttp>3.8.0,<3.9.0
-Babel>2.9.1,<2.10.0
-certifi> 2021.10.8
-aiogram>=2.21
-=======
-httpx==0.23.0
-tornado==6.1
-cachetools==5.2.0
-APScheduler==3.9.1
->>>>>>> 92607af7eda85b6b8448e360adc79905b4263e27
+aiohttp==3.8.1
+Babel==2.9.1
+aiogram==2.21
