--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 beautifulsoup4==4.9.3
 bs4==0.0.1
-certifi==2021.10.8
+certifi==2021.5.30
 chardet==4.0.0
 click==8.0.1
 colorama==0.4.4
-Flask>=2.1.2
+Flask==2.0.1
 gunicorn==20.1.0
 idna==2.10
 itsdangerous==2.0.1
@@ -14,6 +14,3 @@ requests==2.25.1
 soupsieve==2.2.1
 urllib3==1.26.6
 Werkzeug==2.0.1
-aiohttp==3.8.1
-Babel==2.9.1
-aiogram==2.21
